--- a/contato.html
+++ b/contato.html
@@ -36,18 +36,18 @@
                 <img src="img/xls 2.2 diesel.jpg">
             </div>
             <div>
-                <h2 class="titulo">Sobre Você</h2>
+                <h2 class="titulo">Fale Conosco:</h2>
             <form onsubmit="Post(this);">
-                <input type="text" name="nome" placeholder="NOME*" class="fordform" required>
-                <input type="text" name="email" placeholder="E-MAIL*" class="fordform" required>
-                <input type="text" name="cpf" placeholder="CPF*" class="fordform" required>
-                <input type="text" name="sobrenome" placeholder="SOBRENOME*" class="fordform" required>
-                <input type="text" name="telefone" placeholder="TELEFONE*" class="fordform" required>
-                <select name="contato" class="fordform" required>
-                    <option selected>COMO DESEJA SER CONTATADO</option>
-                    <option>TELEFONE</option>
-                    <option>E-MAIL</option>
+                <input type="text" name="nome" placeholder="NOME*" class="fordform" >
+                <input type="text" name="email" placeholder="E-MAIL*" class="fordform" >
+                <input type="text" name="telefone" placeholder="TELEFONE*" class="fordform" >
+                <select name="contato" class="fordform" >
+                    <option selected>MOTIVO DO CONTATO:</option>
+                    <option>ELOGIO</option>
+                    <option>RECLAMAÇÃO</option>
+                    <option>SOLICITAÇÃO</option>
                 </select>
+                <textarea name="mensagem" rows="6" placeholder="MENSAGEM*" class="fordform mensagem"></textarea>
             <button type="submit">Enviar</button>
             </form>
             </div>
