--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Ford</title>    
+    <title>Ford</title>
 
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <script src="js/carousel.js"></script>
 </head>
 
 <body>
-    <header>       
+    <header>
         <div>
             <img src="img/logo-ford-256.png" width="150" class="logo" />
         </div>
@@ -33,14 +36,15 @@
     </header>
     <main>
         <div id="carousel">
+            <img id="image" src="img/imagem_1.jpg">
         </div>
         <div id="carousel-title">
         </div>
         <script>
-             //insert each image on carousel
-            carouselArr.push(new Carousel("imagem_1.jpg","Esta é a nova Ranger Ford 2022. Verifique novidades.","lancamento.html"));
-            carouselArr.push(new Carousel("imagem_2.jpg","Ford a nossa história","#"));
-            carouselArr.push(new Carousel("imagem_3.jpg","Nova Ford Bronco Sport 2022","lancamento.html"));
+            //insert each image on carousel
+            carouselArr.push(new Carousel("img src='img/imagem_1.jpg'", "Esta é a nova Ranger Ford 2022. Verifique novidades.", "lancamento.html"));
+            carouselArr.push(new Carousel("imagem_2.jpg", "Ford a nossa história", "#"));
+            carouselArr.push(new Carousel("imagem_3.jpg", "Nova Ford Bronco Sport 2022", "lancamento.html"));
             Carousel.Start(carouselArr);
         </script>
     </main>
@@ -54,9 +58,9 @@
             </ul>
         </nav>
         <div>
-           <img src="img/ford-96.png" width="70"  />
+            <img src="img/ford-96.png" width="70" />
         </div>
-    </footer>  
-    <script src="js/carousel.js"></script>  
+    </footer>
 </body>
+
 </html>
