--- a/lancamento.html
+++ b/lancamento.html
@@ -50,7 +50,7 @@
                     <img src="img/XL Cabine.jpg" class="photocar">
                     <div class="infocar">
                         <div>
-                            <input type="checkbox" value="car1" class="checkbox"
+                            <input id="teste1" type="checkbox" value="car1" class="checkbox"
                                 onchange="SetCarToCompare(this, new Car('XL Cabine Simples 2.2 Diesel 4X4 MT 2022', 183850, 511, 1821, 232, 1234, 2.2, 160, 1420, 'Aço Estampado 16', 'img/XL Cabine.jpg'));">
                         </div>
                         <div class="info">
