--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <script>
             //insert each image on carousel
             carouselArr.push(new Carousel("imagem_1.jpg", "Esta é a nova Ranger Ford 2022. Verifique novidades.", "lancamento.html"));
-            carouselArr.push(new Carousel("imagem_2.jpg", "Ford a nossa história", "#"));
+            carouselArr.push(new Carousel("imagem_2.jpg", "Ford a nossa história", "https://www.ford.pt/experiencia-ford/ford-blog/o-nosso-legado"));
             carouselArr.push(new Carousel("imagem_3.jpg", "Nova Ford Bronco Sport 2022", "lancamento.html"));
             Carousel.Start(carouselArr);
         </script>
